# kditransform

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: Gaussian-vs-polyexp.ipynb  GaussianMixtureSelect.py  KMeansSelect.py  california-housing.ipynb  classification-plots.ipynb  correlation-wikipedia.ipynb  discretizing-synthetic.ipynb  hawks.ipynb  iris.ipynb  penguins.ipynb  regression-plots.ipynb  requirements.txt  wine.ipynb
kditransform/: __init__.py  kdi_discretizer.py  kdi_transformer.py  ksum.py
kdquantile/: __init__.py  kdquantile_discretizer.py  kdquantile_transformer.py  ksum.py  polyexp_kdquantile_transformer.py
ksquantile/: __init__.py  ksquantile_transformer.py
tests/: test_imports.py
tests/kditransform/: test_kdidiscretizer.py  test_kditransformer.py
tests/kdquantile/: test_kdquantile_discretizer.py  test_kdquantile_transformer.py  test_polyexp_kdquantile_transformer.py
