[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kditransform"
version = "1.1.0"
description = "Kernel density integral transformation"
readme = "README.md"
authors = [
    { name = "Calvin McCarter", email = "mccarter.calvin@gmail.com" },
]
maintainers = [
    { name = "Calvin McCarter", email = "mccarter.calvin@gmail.com" },
]
keywords = [
    "preprocessing",
    "integral transformation",
    "kernel smoothing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "numba >= 0.48",
    "numpy",
    "scikit-learn >= 1.6.0",
    "scipy >= 1.0",
]

[project.urls]
Homepage = "http://github.com/calvinmccarter/kditransform"
